syntax = "proto3";

package game;
option go_package = "api/internal/game;game";

message ServerPacket {
  oneof payload {
    DrawingData drawing_data = 1;
    PlayerJoined player_joined = 2;
    GameStarted game_started = 3;
    RoundUpdate round_update = 4;
    PlayerIsChoosingWord player_is_choosing_word = 5;
    PlayerIsDrawing player_is_drawing = 6;
    TurnSummary turn_summary = 7;
    PlayerGuessedTheWord player_guessed_the_word = 8;
    LeaderBoard leaderboard = 9;
    PlayerMessage player_message = 10;
    PleaseChooseAWord please_choose_a_word = 11;
    InitialRoomSnapshot initial_room_snapshot = 12;
    PlayerKicked player_kicked = 13;
    YourTurnToDraw your_turn_to_draw = 14;
    PlayerLeft player_left = 15;
  }

  int64 server_timestamp = 16;

  message YourTurnToDraw {
    string word = 1;
  }

  message PlayerKicked {
    string username = 1;
  }

  message InitialRoomSnapshot {
    message PlayerState {
      string username = 1;
      int64 score = 2;
      bool is_guesser = 3;
    }
    repeated PlayerState players = 1;
    repeated bytes drawing_history = 2;
    string current_drawer = 3;
  }

  message PlayerJoined {
    string username = 1;
  }

   message PlayerLeft {
    string username = 1;
  }

  message GameStarted {}

  message RoundUpdate {
    int64 round_number = 1;
  }

  message PlayerIsChoosingWord {
    string username = 1;
  }

  message PlayerIsDrawing {
    string username = 1;
  }

  message TurnSummary {
    string word_reveal = 1;
    repeated ScoreDeltas deltas = 2;
    message ScoreDeltas {
      string username = 1;
      int64 score_delta = 2;
    }
  }

  message PlayerGuessedTheWord {
    string username = 1;
  }

  message LeaderBoard {}

  message PlayerMessage {
    string from = 1;
    string message = 2;
  }

  message PleaseChooseAWord {}
}

message ClientPacket {
  oneof payload {
    DrawingData drawing_data = 1;
    PlayerMessage player_message = 2;
    WordChoice word_choice = 3;
    KickVote kick_vote = 4;
    StartGame start_game = 5;
  }

  message StartGame {}

  message WordChoice {
    int64 choice = 1;
  }

  message KickVote {
    string username = 1;
  }

  message PlayerMessage {
    string message = 1;
  }
}

message DrawingData {
  enum DendePartType {
    DRAWING = 0;
    FILLING = 1;
    UNDO = 2;
    REDO = 3;
    CLEAR = 4;
  }
  DendePartType type = 1;
  bool is_line_end = 2;
  repeated uint32 coordinates = 3; // [x1, y1, x2, y2, ...]
  uint32 color = 4; // 0xRRGGBBAA
  uint32 line_width = 5;
}